Correctly handle change propagation specification level in change propagation, ensuring a level is settled before propagating on a higher level